assets/styles/index.css
/* ... */
@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > header > menu {
		top: calc(var(--margin--vertical) + var(--pagination--size) / 4);
	}
}

body > main > header > menu > li {
	display: flex;
}

body > main > header > menu > li > a {
	border-radius: 50%;
}

body > main > header > menu > li > a:active {
	border-radius: 50%;
}

body > main > header > menu > li > a:before {
	border-radius: 50%;
	content: "";
	display: block;
	height: var(--pagination--size);
	width: var(--pagination--size);
}

body > main > header > nav {
	bottom: var(--margin--vertical);
	height: var(--tagline--height);
	position: sticky;
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > header > nav {
		margin-top: calc(var(--tagline--height) * -1);
	}
}

body > main > section:first-of-type {
	margin-top: calc(var(--header--scroll));
	min-height: var(--section--height);
	scroll-margin-top: var(--anchor--offset--section);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > section:first-of-type {
		grid-row: 2;
		margin-top: initial;
	}
}

body > main > section:first-of-type > p {
	--typography--leading: var(--typography--leading--tagline);
	--typography--size: var(--typography--size--intro);
	--typography--weight-adjust: 0.0075em;
}

body > main > section:last-of-type {
	margin-bottom: var(--section--spacing);
	margin-top: calc(var(--section--spacing) + 25vh);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > main > section:last-of-type {
		grid-row: 3;
		margin-bottom: calc(var(--section--spacing) + var(--section--overlap));
	}
}

body > main > section:last-of-type #art {
	margin-top: -25vh;
}

body > main > section:last-of-type #art,
body > main > section:last-of-type #media,
body > main > section:last-of-type #science {
	min-height: var(--section--height);
	scroll-margin-top: var(--anchor--offset--section);
}

body > main > section:last-of-type #media,
body > main > section:last-of-type #science {
	margin-top: var(--section--spacing);
}

body > footer {
	min-height: calc(100vh - var(--tagline--height) - var(--margin--vertical) * 2);
}

body > footer > aside {
	align-items: end;
	grid-template-areas: "links button";
	margin-bottom: calc(-1 * var(--margin--vertical));
	top: calc(var(--tagline--height) + var(--margin--vertical) * 2 - 0.2rem);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > footer > aside {
		align-self: end;
		bottom: var(--margin--vertical);
		grid-row: 1;
		margin-bottom: initial;
		margin-top: var(--margin);
		padding-bottom: initial;
		top: initial;
	}
}

body > footer > aside > ul {
	--typography--leading: var(--typography--leading--tagline);
	--typography--size: var(--typography--size--tagline);
	align-items: start;
	display: flex;
	grid-area: links;
	flex-direction: column;
	gap: var(--typography--between);
}

body > footer > aside > ul > li > a > p > svg {
	--icon--shift: calc((var(--typography--cap-height) - var(--typography--x-height)) / 2 * 1em);
	height: calc(var(--typography--cap-height) * 1em);
	margin-bottom: calc(var(--icon--shift) * -1);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > footer > aside > section {
		align-items: end;
		display: flex;
		height: calc(var(--links--height) + var(--footer--spacing) + var(--colophon--height) - var(--margin--vertical));
		justify-content: center;
		margin-bottom: calc(-1 * var(--footer--spacing) - var(--colophon--height) + var(--margin--vertical));
	}

	body > footer > aside > section > nav {
		bottom: var(--margin--vertical);
		position: sticky;
	}

	body > footer > aside > section > nav > a {
		transform: translateY(0.2rem);
	}
}

@media (orientation: landscape) and (min-width: 48em) and (min-height: 30em),
(orientation: landscape) and (min-width: 58.125em),
(min-width: 35.5em) and (min-height: 30em) and (min-width: 48em) and (min-height: 30em),
(min-width: 35.5em) and (min-height: 30em) and (min-width: 58.125em),
(min-width: 58.125em) and (min-width: 48em) and (min-height: 30em),
(min-width: 58.125em) and (min-width: 58.125em) {
	body > footer > aside > section > nav > a {
		transform: translateY(0.4rem);
	}
}

body > footer > section {
	margin-top: var(--section--spacing);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > footer > section {
		grid-row: 1;
		margin-top: calc(-1 * var(--section--overlap));
	}
}

body > footer > section,
body > footer > section h2,
body > footer > section h3 {
	scroll-margin-top: var(--anchor--offset--about);
}

body > footer > footer {
	grid-template-columns: 1fr;
	margin-top: var(--footer--spacing);
	row-gap: var(--margin);
	transition-duration: 400ms;
	transition-property: margin;
	transition-timing-function: ease-in-out;
	will-change: margin;
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > footer > footer {
		grid-template-columns: var(--column--ratio);
	}
}

body > footer > footer p {
	--typography--size: var(--typography--size--footer);
	--typography--weight-adjust: 0.01em;
}

body > footer > footer > section:last-child {
	margin-right: var(--margin);
}

@media (orientation: landscape),
(min-width: 35.5em) and (min-height: 30em),
(min-width: 58.125em) {
	body > footer > footer > section:last-child {
		margin-right: var(--pagination--gutter);
	}
}

body nav {
	align-items: end;
	display: flex;
	justify-content: center;
	grid-area: button;
}

body nav > a {
	position: absolute;
}
/* ... */

